--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -3,7 +3,7 @@
     border-radius: 15px;
     width: 100%;
     height: 50vh;
-    background-color: #60CAE8;
+    background-color: #FFF;
 }
 
 .form_contact {
