--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -1,17 +1,60 @@
 .contact {
+    display: grid;
+    grid-template-columns: 0.5fr 1fr 0.5fr;
+    grid-template-rows: 0.2fr 1fr 0.2fr;
+    grid-template-areas:
+      " . . . "
+      " . contact . "
+      " . . . ";
     position: relative;
     border-radius: 15px;
     width: 100%;
-    height: 50vh;
     background-color: #FFF;
+    padding-top: 80px;
 }
 
 .form_contact {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 90%;
-    height: 90%;
+    grid-area: contact;
+    width: 100%;
+    height: 100%;
 
+}
+
+.input_contact {
+    margin-top: 10px;
+    height: 100%;
+    width: 100%;
+}
+
+#msg {
+    resize : none;
+    height: 300px;
+}
+.button button{
+    margin-top: 10px;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
+    border-style: none;
+    padding: 10px;
+
+}
+.button button:hover{
+    cursor: pointer;
+    background-color: red;
+
+}
+@media screen and ( max-width: 740px) {
+    .contact {
+        grid-template-columns: 1fr;
+    grid-template-areas:
+      " . "
+      " contact "
+      " . ";
+    }  
+}
+
+@media screen and ( min-width: 741px) {
+}
+@media screen and ( min-width: 1200px) {
 }
