--- a/css/panier_style.css
+++ b/css/panier_style.css
@@ -5,9 +5,11 @@
     right: -100vw;
     background-color: white;
     z-index: 4;
-    height: 91.5%;
+    height: 70%;
     width: 50vw;
-    margin-bottom: 20px;
+    border-left: solid rgb(189, 10, 10);
+    border-bottom: solid rgb(189, 10, 10);
+    transition: .5s ease-in-out;
 }
 
 .open_panier {
@@ -46,11 +48,48 @@
 .buttonP {
     cursor: pointer;
 }
+.button_payer {
+    margin-left: 50px;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    grid-area: button;
+    height: 50px;
+    width: 150px;
+    border-radius: 50px;
+    background-color: rgb(200, 200, 200);
+    border-style: none;
+    font-size: 18px;
+    font-weight: 50;
+    transition: border-radius 0.25s ease-out;
+}
+.button_payer:hover {
+    cursor: pointer;
+    background-color: rgb(189, 10, 10);
+    border-radius: 5px;
+    color: white;
+}
+.produit_panier_vide {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#img_panier_vide {
+    width: 35%;
+}
+#text_panier_vide {
+    font-size: 100%;
+}
 
 @media screen and ( max-width: 740px) {
     .panier_fenetre {
         width: 100vw;
+        height: 89%;
     }
+}
+@media screen and (max-width: 900px) {
     .produit_panier {
         width: 80%;
     }
