--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -19,11 +19,26 @@
     height: 100%;
 
 }
+.label_contact {
+    margin-left: 3px;
+}
 
 .input_contact {
     margin-top: 10px;
-    height: 100%;
+    margin-bottom: 20px;
+    height: 30px;
+    border-radius: 15px;
+    padding: 5px;
+    border: 2px solid rgb(163, 163, 163);
     width: 100%;
+}
+.input_contact:focus{
+    border: 1px solid rgb(76, 189, 10);
+
+}
+.input_contact:focus:invalid {
+    border: 1px solid rgb(189, 10, 10);
+
 }
 
 #msg {
@@ -32,7 +47,7 @@
 }
 .button button{
     margin-top: 10px;
-    width: 100px;
+    width: 150px;
     border-radius: 50px;
     color: black;
     background-color: rgb(163, 163, 163);
