--- a/css/magasin_style.css
+++ b/css/magasin_style.css
@@ -7,7 +7,7 @@ main{
     grid-template-rows: 0.5fr 1fr 0.5fr;
     grid-template-columns: 0.5fr 1fr 0.5fr;
     grid-template-areas:
-        " . . . "
+        " . titre . "
         " . contact . "
         " . . . ";
 }
