--- a/css/achat_style.css
+++ b/css/achat_style.css
@@ -2,6 +2,7 @@
     padding-top: 150px;
     padding-bottom: 50px;
     display: grid;
+    row-gap: 20px;
     grid-template-columns: 0.1fr 1fr 1fr 0.1fr;
     grid-template-rows: 1fr;
     grid-template-areas:
